--- a/impl/pnr/EthernetBRIDGE.power.html
+++ b/impl/pnr/EthernetBRIDGE.power.html
@@ -87,7 +87,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Mon Mar 13 23:03:52 2023
+<td>Thu May 11 14:35:13 2023
 </td>
 </tr>
 <tr>
@@ -100,7 +100,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <table class="summary_table">
 <tr>
 <td class="label">Total Power (mW)</td>
-<td>174.879</td>
+<td>192.192</td>
 </tr>
 <tr>
 <td class="label">Quiescent Power (mW)</td>
@@ -108,14 +108,14 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Dynamic Power (mW)</td>
-<td>11.657</td>
+<td>28.970</td>
 </tr>
 </table>
 <h2><a name="Thermal_Info">Thermal Information:</a></h2>
 <table class="summary_table">
 <tr>
 <td class="label">Junction Temperature</td>
-<td>27.950</td>
+<td>28.242</td>
 </tr>
 <tr>
 <td class="label">Theta JA</td>
@@ -123,7 +123,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Max Allowed Ambient Temperature</td>
-<td>82.050</td>
+<td>81.758</td>
 </tr>
 </table>
 <h2><a name="Configure_Info">Configure Information:</a></h2>
@@ -192,23 +192,23 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td>VCC</td>
 <td>1.000</td>
-<td>3.065</td>
+<td>18.381</td>
 <td>102.762</td>
-<td>105.827</td>
+<td>121.143</td>
 </tr>
 <tr>
 <td>VCCX</td>
 <td>2.500</td>
-<td>2.005</td>
+<td>2.469</td>
 <td>23.366</td>
-<td>63.426</td>
+<td>64.587</td>
 </tr>
 <tr>
 <td>VCCIO18</td>
 <td>1.800</td>
-<td>1.988</td>
+<td>2.453</td>
 <td>1.137</td>
-<td>5.626</td>
+<td>6.462</td>
 </tr>
 </table>
 <h1><a name="Detail">Power Details</a></h1>
@@ -222,15 +222,21 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>Logic</td>
-<td>0.988</td>
+<td>1.567</td>
 <td>NA</td>
-<td>12.500</td>
+<td>12.552</td>
 </tr>
 <tr>
 <td>IO</td>
-<td>16.679
+<td>19.141
 <td>6.071
-<td>17.578
+<td>20.703
+</tr>
+<tr>
+<td>BSRAM</td>
+<td>14.265
+<td>NA</td>
+<td>NA</td>
 </tr>
 </table>
 <h2><a name="By_Hierarchy">Power By Hierarchy:</a></h2>
@@ -242,40 +248,40 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>top_mac_to_fifo_test</td>
-<td>0.988</td>
-<td>0.988(0.987)</td>
+<td>15.832</td>
+<td>15.832(15.718)</td>
 <tr>
-<td>top_mac_to_fifo_test/config_adin1300/</td>
-<td>0.002</td>
-<td>0.002(0.000)</td>
+<td>top_mac_to_fifo_test/controller/</td>
+<td>0.180</td>
+<td>0.180(0.000)</td>
 <tr>
 <td>top_mac_to_fifo_test/mac/</td>
-<td>0.985</td>
-<td>0.985(0.985)</td>
+<td>1.096</td>
+<td>1.096(1.096)</td>
 <tr>
 <td>top_mac_to_fifo_test/mac/mac_controller/</td>
-<td>0.985</td>
-<td>0.985(0.985)</td>
+<td>1.096</td>
+<td>1.096(1.096)</td>
 <tr>
 <td>top_mac_to_fifo_test/mac/mac_controller/u_triple_speed_mac/</td>
-<td>0.985</td>
-<td>0.985(0.985)</td>
+<td>1.096</td>
+<td>1.096(1.096)</td>
 <tr>
 <td>top_mac_to_fifo_test/mac/mac_controller/u_triple_speed_mac/u_mac_rx_ctrl/</td>
-<td>0.094</td>
-<td>0.094(0.000)</td>
+<td>0.203</td>
+<td>0.203(0.000)</td>
 <tr>
 <td>top_mac_to_fifo_test/mac/mac_controller/u_triple_speed_mac/u_mac_rx_if_block/</td>
-<td>0.043</td>
-<td>0.043(0.043)</td>
+<td>0.050</td>
+<td>0.050(0.050)</td>
 <tr>
 <td>top_mac_to_fifo_test/mac/mac_controller/u_triple_speed_mac/u_mac_rx_if_block/u_mac_rx_if_mux/</td>
-<td>0.005</td>
-<td>0.005(0.000)</td>
+<td>0.006</td>
+<td>0.006(0.000)</td>
 <tr>
 <td>top_mac_to_fifo_test/mac/mac_controller/u_triple_speed_mac/u_mac_rx_if_block/u_mii_rx_if/</td>
-<td>0.038</td>
-<td>0.038(0.000)</td>
+<td>0.043</td>
+<td>0.043(0.000)</td>
 <tr>
 <td>top_mac_to_fifo_test/mac/mac_controller/u_triple_speed_mac/u_mac_tx_ctrl/</td>
 <td>0.735</td>
@@ -298,12 +304,12 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>0.014(0.000)</td>
 <tr>
 <td>top_mac_to_fifo_test/mac/mac_controller/u_triple_speed_mac/u_miim_block/</td>
-<td>0.099</td>
-<td>0.099(0.099)</td>
+<td>0.095</td>
+<td>0.095(0.095)</td>
 <tr>
 <td>top_mac_to_fifo_test/mac/mac_controller/u_triple_speed_mac/u_miim_block/u_eth_miim/</td>
-<td>0.099</td>
-<td>0.099(0.063)</td>
+<td>0.095</td>
+<td>0.095(0.063)</td>
 <tr>
 <td>top_mac_to_fifo_test/mac/mac_controller/u_triple_speed_mac/u_miim_block/u_eth_miim/clkgen/</td>
 <td>0.020</td>
@@ -316,6 +322,10 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>top_mac_to_fifo_test/mac/mac_controller/u_triple_speed_mac/u_miim_block/u_eth_miim/shftrg/</td>
 <td>0.035</td>
 <td>0.035(0.000)</td>
+<tr>
+<td>top_mac_to_fifo_test/rxfifo/</td>
+<td>14.442</td>
+<td>14.442(0.000)</td>
 </table>
 <h2><a name="By_Clock_Domain">Power By Clock Domain:</a></h2>
 <table class="detail_table">
@@ -327,17 +337,22 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td>phy_rx_clk</td>
 <td>100.000</td>
-<td>0.157</td>
-</tr>
-<tr>
-<td>clk</td>
-<td>100.000</td>
-<td>0.116</td>
+<td>14.826</td>
 </tr>
 <tr>
 <td>phy_tx_clk</td>
 <td>100.000</td>
-<td>0.776</td>
+<td>0.892</td>
+</tr>
+<tr>
+<td>rx_stat_valid</td>
+<td>100.000</td>
+<td>0.080</td>
+</tr>
+<tr>
+<td>clk</td>
+<td>100.000</td>
+<td>0.103</td>
 </tr>
 </table>
 </div><!-- content -->
