--- a/impl/pnr/EthernetBRIDGE.rpt.html
+++ b/impl/pnr/EthernetBRIDGE.rpt.html
@@ -83,7 +83,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Mon Mar 13 23:03:52 2023
+<td>Thu May 11 14:35:13 2023
 </td>
 </tr>
 <tr>
@@ -97,23 +97,23 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td class="label">Place & Route Process</td>
 <td>Running placement:
-   Placement Phase 0: CPU time = 0h 0m 0.078s, Elapsed time = 0h 0m 0.079s
-   Placement Phase 1: CPU time = 0h 0m 0.282s, Elapsed time = 0h 0m 0.281s
-   Placement Phase 2: CPU time = 0h 0m 0.098s, Elapsed time = 0h 0m 0.098s
-   Placement Phase 3: CPU time = 0h 0m 0.862s, Elapsed time = 0h 0m 0.862s
+   Placement Phase 0: CPU time = 0h 0m 0.105s, Elapsed time = 0h 0m 0.105s
+   Placement Phase 1: CPU time = 0h 0m 0.235s, Elapsed time = 0h 0m 0.236s
+   Placement Phase 2: CPU time = 0h 0m 0.145s, Elapsed time = 0h 0m 0.144s
+   Placement Phase 3: CPU time = 0h 0m 0.929s, Elapsed time = 0h 0m 0.93s
    Total Placement: CPU time = 0h 0m 1s, Elapsed time = 0h 0m 1s
 Running routing:
    Routing Phase 0: CPU time = 0h 0m 0.001s, Elapsed time = 0h 0m 0.001s
-   Routing Phase 1: CPU time = 0h 0m 0.201s, Elapsed time = 0h 0m 0.202s
-   Routing Phase 2: CPU time = 0h 0m 0.336s, Elapsed time = 0h 0m 0.336s
-   Total Routing: CPU time = 0h 0m 0.538s, Elapsed time = 0h 0m 0.539s
+   Routing Phase 1: CPU time = 0h 0m 0.131s, Elapsed time = 0h 0m 0.132s
+   Routing Phase 2: CPU time = 0h 0m 0.442s, Elapsed time = 0h 0m 0.442s
+   Total Routing: CPU time = 0h 0m 0.574s, Elapsed time = 0h 0m 0.575s
 Generate output files:
-   CPU time = 0h 0m 2s, Elapsed time = 0h 0m 2s
+   CPU time = 0h 0m 3s, Elapsed time = 0h 0m 3s
 </td>
 </tr>
 <tr>
 <td class="label">Total Time and Memory Usage</td>
-<td>CPU time = 0h 0m 4s, Elapsed time = 0h 0m 4s, Peak memory usage = 333MB</td>
+<td>CPU time = 0h 0m 5s, Elapsed time = 0h 0m 5s, Peak memory usage = 331MB</td>
 </tr>
 </table>
 <br/>
@@ -128,23 +128,23 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">Logic</td>
-<td>794/20736</td>
-<td>4%</td>
+<td>1070/20736</td>
+<td>6%</td>
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --LUT,ALU,ROM16</td>
-<td>662(662 LUT, 0 ALU, 0 ROM16)</td>
+<td>932(893 LUT, 39 ALU, 0 ROM16)</td>
 <td>-</td>
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --SSRAM(RAM16)</td>
-<td>22</td>
+<td>23</td>
 <td>-</td>
 </tr>
 <tr>
 <td class="label">Register</td>
-<td>463/15909</td>
-<td>3%</td>
+<td>628/15909</td>
+<td>4%</td>
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --Logic Register as Latch</td>
@@ -153,8 +153,8 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --Logic Register as FF</td>
-<td>453/15552</td>
-<td>3%</td>
+<td>618/15552</td>
+<td>4%</td>
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --I/O Register as Latch</td>
@@ -168,8 +168,8 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">CLS</td>
-<td>534/10368</td>
-<td>6%</td>
+<td>713/10368</td>
+<td>7%</td>
 </tr>
 <tr>
 <td class="label">I/O Port</td>
@@ -203,8 +203,8 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">BSRAM</td>
-<td>0</td>
-<td>0%</td>
+<td>1 SDPB<br/></td>
+<td>3%</td>
 </tr>
 <tr>
 <td class="label">DSP</td>
@@ -259,15 +259,15 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">bank 0</td>
-<td>8/19(42%)</td>
+<td>7/19(36%)</td>
 </tr>
 <tr>
 <td class="label">bank 1</td>
-<td>4/12(33%)</td>
+<td>5/12(41%)</td>
 </tr>
 <tr>
 <td class="label">bank 2</td>
-<td>0/12(0%)</td>
+<td>1/12(8%)</td>
 </tr>
 <tr>
 <td class="label">bank 3</td>
@@ -287,7 +287,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">bank 7</td>
-<td>5/8(62%)</td>
+<td>4/8(50%)</td>
 </tr>
 </table>
 <br/>
@@ -299,7 +299,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">PRIMARY</td>
-<td>3/8(38%)</td>
+<td>4/8(50%)</td>
 </tr>
 <tr>
 <td class="label">LW</td>
@@ -307,7 +307,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">GCLK_PIN</td>
-<td>2/6(34%)</td>
+<td>4/6(67%)</td>
 </tr>
 <tr>
 <td class="label">PLL</td>
@@ -333,7 +333,7 @@ Generate output files:
 <tr>
 <td class="label">clk_d</td>
 <td>PRIMARY</td>
-<td> BR BL</td>
+<td> BL</td>
 </tr>
 <tr>
 <td class="label">phy_rx_clk_d</td>
@@ -344,6 +344,11 @@ Generate output files:
 <td class="label">phy_tx_clk_d</td>
 <td>PRIMARY</td>
 <td> TR TL BR BL</td>
+</tr>
+<tr>
+<td class="label">rx_stat_valid</td>
+<td>PRIMARY</td>
+<td> TL BL</td>
 </tr>
 <tr>
 <td class="label">clk_tx_ena_int</td>
@@ -376,10 +381,10 @@ Generate output files:
 <tr>
 <td class="label">clk</td>
 <td></td>
-<td>11/7</td>
-<td>N</td>
+<td>122/0</td>
+<td>Y</td>
 <td>in</td>
-<td>IOL27[A]</td>
+<td>IOT27[B]</td>
 <td>LVCMOS18</td>
 <td>NA</td>
 <td>UP</td>
@@ -388,7 +393,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>OFF</td>
+<td>NA</td>
 <td>NA</td>
 <td>1.8</td>
 </tr>
@@ -642,6 +647,82 @@ Generate output files:
 <tr>
 <td class="label">data_from_buff[0]</td>
 <td></td>
+<td>105/2</td>
+<td>N</td>
+<td>out</td>
+<td>IOR7[B]</td>
+<td>LVCMOS18</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
+<td>NA</td>
+<td>OFF</td>
+<td>NA</td>
+<td>1.8</td>
+</tr>
+<tr>
+<td class="label">data_from_buff[1]</td>
+<td></td>
+<td>123/0</td>
+<td>N</td>
+<td>out</td>
+<td>IOT27[A]</td>
+<td>LVCMOS18</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>1.8</td>
+</tr>
+<tr>
+<td class="label">data_from_buff[2]</td>
+<td></td>
+<td>11/7</td>
+<td>N</td>
+<td>out</td>
+<td>IOL27[A]</td>
+<td>LVCMOS18</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
+<td>NA</td>
+<td>OFF</td>
+<td>NA</td>
+<td>1.8</td>
+</tr>
+<tr>
+<td class="label">data_from_buff[3]</td>
+<td></td>
+<td>121/1</td>
+<td>N</td>
+<td>out</td>
+<td>IOT30[A]</td>
+<td>LVCMOS18</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>1.8</td>
+</tr>
+<tr>
+<td class="label">data_from_buff[4]</td>
+<td></td>
 <td>12/7</td>
 <td>N</td>
 <td>out</td>
@@ -659,7 +740,26 @@ Generate output files:
 <td>1.8</td>
 </tr>
 <tr>
-<td class="label">data_from_buff[1]</td>
+<td class="label">data_from_buff[5]</td>
+<td></td>
+<td>119/1</td>
+<td>N</td>
+<td>out</td>
+<td>IOT38[A]</td>
+<td>LVCMOS18</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>1.8</td>
+</tr>
+<tr>
+<td class="label">data_from_buff[6]</td>
 <td></td>
 <td>9/7</td>
 <td>N</td>
@@ -678,107 +778,12 @@ Generate output files:
 <td>1.8</td>
 </tr>
 <tr>
-<td class="label">data_from_buff[2]</td>
-<td></td>
-<td>7/7</td>
-<td>N</td>
-<td>out</td>
-<td>IOL7[B]</td>
-<td>LVCMOS18</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
-<td>NA</td>
-<td>OFF</td>
-<td>NA</td>
-<td>1.8</td>
-</tr>
-<tr>
-<td class="label">data_from_buff[3]</td>
-<td></td>
-<td>4/7</td>
-<td>N</td>
-<td>out</td>
-<td>IOL2[B]</td>
-<td>LVCMOS18</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
-<td>NA</td>
-<td>OFF</td>
-<td>NA</td>
-<td>1.8</td>
-</tr>
-<tr>
-<td class="label">data_from_buff[4]</td>
-<td></td>
-<td>137/0</td>
-<td>N</td>
-<td>out</td>
-<td>IOT6[B]</td>
-<td>LVCMOS18</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>1.8</td>
-</tr>
-<tr>
-<td class="label">data_from_buff[5]</td>
-<td></td>
-<td>136/0</td>
-<td>N</td>
-<td>out</td>
-<td>IOT7[A]</td>
-<td>LVCMOS18</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>1.8</td>
-</tr>
-<tr>
-<td class="label">data_from_buff[6]</td>
-<td></td>
-<td>135/0</td>
-<td>N</td>
-<td>out</td>
-<td>IOT7[B]</td>
-<td>LVCMOS18</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>1.8</td>
-</tr>
-<tr>
 <td class="label">data_from_buff[7]</td>
 <td></td>
-<td>132/0</td>
+<td>10/7</td>
 <td>N</td>
 <td>out</td>
-<td>IOT14[A]</td>
+<td>IOL22[B]</td>
 <td>LVCMOS18</td>
 <td>8</td>
 <td>UP</td>
@@ -787,31 +792,12 @@ Generate output files:
 <td>OFF</td>
 <td>FAST</td>
 <td>NA</td>
-<td>NA</td>
+<td>OFF</td>
 <td>NA</td>
 <td>1.8</td>
 </tr>
 <tr>
 <td class="label">data_from_phy[0]</td>
-<td></td>
-<td>141/0</td>
-<td>Y</td>
-<td>out</td>
-<td>IOT2[B]</td>
-<td>LVCMOS18</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>1.8</td>
-</tr>
-<tr>
-<td class="label">data_from_phy[1]</td>
 <td></td>
 <td>140/0</td>
 <td>Y</td>
@@ -830,7 +816,7 @@ Generate output files:
 <td>1.8</td>
 </tr>
 <tr>
-<td class="label">data_from_phy[2]</td>
+<td class="label">data_from_phy[1]</td>
 <td></td>
 <td>139/0</td>
 <td>Y</td>
@@ -849,7 +835,7 @@ Generate output files:
 <td>1.8</td>
 </tr>
 <tr>
-<td class="label">data_from_phy[3]</td>
+<td class="label">data_from_phy[2]</td>
 <td></td>
 <td>138/0</td>
 <td>Y</td>
@@ -868,7 +854,45 @@ Generate output files:
 <td>1.8</td>
 </tr>
 <tr>
+<td class="label">data_from_phy[3]</td>
+<td></td>
+<td>124/0</td>
+<td>Y</td>
+<td>out</td>
+<td>IOT23[B]</td>
+<td>LVCMOS18</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>1.8</td>
+</tr>
+<tr>
 <td class="label">data_from_phy[4]</td>
+<td></td>
+<td>125/0</td>
+<td>Y</td>
+<td>out</td>
+<td>IOT22[A]</td>
+<td>LVCMOS18</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>1.8</td>
+</tr>
+<tr>
+<td class="label">data_from_phy[5]</td>
 <td></td>
 <td>112/1</td>
 <td>Y</td>
@@ -887,7 +911,7 @@ Generate output files:
 <td>1.8</td>
 </tr>
 <tr>
-<td class="label">data_from_phy[5]</td>
+<td class="label">data_from_phy[6]</td>
 <td></td>
 <td>113/1</td>
 <td>Y</td>
@@ -906,31 +930,12 @@ Generate output files:
 <td>1.8</td>
 </tr>
 <tr>
-<td class="label">data_from_phy[6]</td>
+<td class="label">data_from_phy[7]</td>
 <td></td>
 <td>110/1</td>
 <td>Y</td>
 <td>out</td>
 <td>IOT50[B]</td>
-<td>LVCMOS18</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>1.8</td>
-</tr>
-<tr>
-<td class="label">data_from_phy[7]</td>
-<td></td>
-<td>111/1</td>
-<td>Y</td>
-<td>out</td>
-<td>IOT50[A]</td>
 <td>LVCMOS18</td>
 <td>8</td>
 <td>UP</td>
@@ -985,16 +990,16 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">141/0</td>
-<td>data_from_phy[0]</td>
-<td>out</td>
+<td>-</td>
+<td>in</td>
 <td>IOT2[B]</td>
 <td>LVCMOS18</td>
-<td>8</td>
+<td>NA</td>
 <td>UP</td>
+<td>ON</td>
+<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
@@ -1002,7 +1007,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">140/0</td>
-<td>data_from_phy[1]</td>
+<td>data_from_phy[0]</td>
 <td>out</td>
 <td>IOT4[A]</td>
 <td>LVCMOS18</td>
@@ -1019,7 +1024,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">139/0</td>
-<td>data_from_phy[2]</td>
+<td>data_from_phy[1]</td>
 <td>out</td>
 <td>IOT4[B]</td>
 <td>LVCMOS18</td>
@@ -1036,7 +1041,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">138/0</td>
-<td>data_from_phy[3]</td>
+<td>data_from_phy[2]</td>
 <td>out</td>
 <td>IOT6[A]</td>
 <td>LVCMOS18</td>
@@ -1053,16 +1058,16 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">137/0</td>
-<td>data_from_buff[4]</td>
-<td>out</td>
+<td>-</td>
+<td>in</td>
 <td>IOT6[B]</td>
 <td>LVCMOS18</td>
-<td>8</td>
+<td>NA</td>
 <td>UP</td>
+<td>ON</td>
+<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
@@ -1070,16 +1075,16 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">136/0</td>
-<td>data_from_buff[5]</td>
-<td>out</td>
+<td>-</td>
+<td>in</td>
 <td>IOT7[A]</td>
 <td>LVCMOS18</td>
-<td>8</td>
+<td>NA</td>
 <td>UP</td>
+<td>ON</td>
+<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
@@ -1087,16 +1092,16 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">135/0</td>
-<td>data_from_buff[6]</td>
-<td>out</td>
+<td>-</td>
+<td>in</td>
 <td>IOT7[B]</td>
 <td>LVCMOS18</td>
-<td>8</td>
+<td>NA</td>
 <td>UP</td>
+<td>ON</td>
+<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
@@ -1138,16 +1143,16 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">132/0</td>
-<td>data_from_buff[7]</td>
-<td>out</td>
+<td>-</td>
+<td>in</td>
 <td>IOT14[A]</td>
 <td>LVCMOS18</td>
-<td>8</td>
+<td>NA</td>
 <td>UP</td>
+<td>ON</td>
+<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
@@ -1223,16 +1228,16 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">125/0</td>
-<td>-</td>
-<td>in</td>
+<td>data_from_phy[4]</td>
+<td>out</td>
 <td>IOT22[A]</td>
 <td>LVCMOS18</td>
-<td>NA</td>
+<td>8</td>
 <td>UP</td>
-<td>ON</td>
-<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
@@ -1257,16 +1262,16 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">124/0</td>
-<td>-</td>
-<td>in</td>
+<td>data_from_phy[3]</td>
+<td>out</td>
 <td>IOT23[B]</td>
 <td>LVCMOS18</td>
-<td>NA</td>
+<td>8</td>
 <td>UP</td>
-<td>ON</td>
-<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
@@ -1274,16 +1279,16 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">123/0</td>
-<td>-</td>
-<td>in</td>
+<td>data_from_buff[1]</td>
+<td>out</td>
 <td>IOT27[A]</td>
 <td>LVCMOS18</td>
-<td>NA</td>
+<td>8</td>
 <td>UP</td>
-<td>ON</td>
-<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
@@ -1291,7 +1296,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">122/0</td>
-<td>-</td>
+<td>clk</td>
 <td>in</td>
 <td>IOT27[B]</td>
 <td>LVCMOS18</td>
@@ -1308,16 +1313,16 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">121/1</td>
-<td>-</td>
-<td>in</td>
+<td>data_from_buff[3]</td>
+<td>out</td>
 <td>IOT30[A]</td>
 <td>LVCMOS18</td>
-<td>NA</td>
+<td>8</td>
 <td>UP</td>
-<td>ON</td>
-<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
@@ -1342,16 +1347,16 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">119/1</td>
-<td>-</td>
-<td>in</td>
+<td>data_from_buff[5]</td>
+<td>out</td>
 <td>IOT38[A]</td>
 <td>LVCMOS18</td>
-<td>NA</td>
+<td>8</td>
 <td>UP</td>
-<td>ON</td>
-<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
@@ -1444,7 +1449,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">113/1</td>
-<td>data_from_phy[5]</td>
+<td>data_from_phy[6]</td>
 <td>out</td>
 <td>IOT48[A]</td>
 <td>LVCMOS18</td>
@@ -1461,7 +1466,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">112/1</td>
-<td>data_from_phy[4]</td>
+<td>data_from_phy[5]</td>
 <td>out</td>
 <td>IOT48[B]</td>
 <td>LVCMOS18</td>
@@ -1478,16 +1483,16 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">111/1</td>
-<td>data_from_phy[7]</td>
-<td>out</td>
+<td>-</td>
+<td>in</td>
 <td>IOT50[A]</td>
 <td>LVCMOS18</td>
-<td>8</td>
+<td>NA</td>
 <td>UP</td>
+<td>ON</td>
+<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
@@ -1495,7 +1500,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">110/1</td>
-<td>data_from_phy[6]</td>
+<td>data_from_phy[7]</td>
 <td>out</td>
 <td>IOT50[B]</td>
 <td>LVCMOS18</td>
@@ -2090,18 +2095,18 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">4/7</td>
-<td>data_from_buff[3]</td>
-<td>out</td>
+<td>-</td>
+<td>in</td>
 <td>IOL2[B]</td>
 <td>LVCMOS18</td>
-<td>8</td>
+<td>NA</td>
 <td>UP</td>
+<td>ON</td>
+<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
 <td>NA</td>
-<td>OFF</td>
+<td>NA</td>
 <td>NA</td>
 <td>1.8</td>
 </tr>
@@ -2124,24 +2129,24 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">7/7</td>
-<td>data_from_buff[2]</td>
-<td>out</td>
+<td>-</td>
+<td>in</td>
 <td>IOL7[B]</td>
 <td>LVCMOS18</td>
-<td>8</td>
+<td>NA</td>
 <td>UP</td>
+<td>ON</td>
+<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
 <td>NA</td>
-<td>OFF</td>
+<td>NA</td>
 <td>NA</td>
 <td>1.8</td>
 </tr>
 <tr>
 <td class="label">9/7</td>
-<td>data_from_buff[1]</td>
+<td>data_from_buff[6]</td>
 <td>out</td>
 <td>IOL22[A]</td>
 <td>LVCMOS18</td>
@@ -2158,33 +2163,33 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">10/7</td>
-<td>-</td>
-<td>in</td>
+<td>data_from_buff[7]</td>
+<td>out</td>
 <td>IOL22[B]</td>
 <td>LVCMOS18</td>
-<td>NA</td>
+<td>8</td>
 <td>UP</td>
-<td>ON</td>
-<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
 <td>NA</td>
-<td>NA</td>
+<td>OFF</td>
 <td>NA</td>
 <td>1.8</td>
 </tr>
 <tr>
 <td class="label">11/7</td>
-<td>clk</td>
-<td>in</td>
+<td>data_from_buff[2]</td>
+<td>out</td>
 <td>IOL27[A]</td>
 <td>LVCMOS18</td>
-<td>NA</td>
+<td>8</td>
 <td>UP</td>
-<td>ON</td>
-<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
 <td>NA</td>
 <td>OFF</td>
 <td>NA</td>
@@ -2192,7 +2197,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">12/7</td>
-<td>data_from_buff[0]</td>
+<td>data_from_buff[4]</td>
 <td>out</td>
 <td>IOL27[B]</td>
 <td>LVCMOS18</td>
@@ -2413,18 +2418,18 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">105/2</td>
-<td>-</td>
-<td>in</td>
+<td>data_from_buff[0]</td>
+<td>out</td>
 <td>IOR7[B]</td>
 <td>LVCMOS18</td>
-<td>NA</td>
+<td>8</td>
 <td>UP</td>
-<td>ON</td>
-<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
 <td>NA</td>
-<td>NA</td>
+<td>OFF</td>
 <td>NA</td>
 <td>1.8</td>
 </tr>
