--- a/impl/pnr/EthernetBRIDGE.pin.html
+++ b/impl/pnr/EthernetBRIDGE.pin.html
@@ -78,7 +78,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Mon Mar 13 23:03:52 2023
+<td>Thu May 11 14:35:13 2023
 </td>
 </tr>
 <tr>
@@ -111,10 +111,10 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td class="label">clk</td>
 <td></td>
-<td>11/7</td>
-<td>N</td>
+<td>122/0</td>
+<td>Y</td>
 <td>in</td>
-<td>IOL27[A]</td>
+<td>IOT27[B]</td>
 <td>LVCMOS18</td>
 <td>NA</td>
 <td>UP</td>
@@ -123,7 +123,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>OFF</td>
+<td>NA</td>
 <td>NA</td>
 <td>1.8</td>
 </tr>
@@ -377,6 +377,82 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td class="label">data_from_buff[0]</td>
 <td></td>
+<td>105/2</td>
+<td>N</td>
+<td>out</td>
+<td>IOR7[B]</td>
+<td>LVCMOS18</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
+<td>NA</td>
+<td>OFF</td>
+<td>NA</td>
+<td>1.8</td>
+</tr>
+<tr>
+<td class="label">data_from_buff[1]</td>
+<td></td>
+<td>123/0</td>
+<td>N</td>
+<td>out</td>
+<td>IOT27[A]</td>
+<td>LVCMOS18</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>1.8</td>
+</tr>
+<tr>
+<td class="label">data_from_buff[2]</td>
+<td></td>
+<td>11/7</td>
+<td>N</td>
+<td>out</td>
+<td>IOL27[A]</td>
+<td>LVCMOS18</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
+<td>NA</td>
+<td>OFF</td>
+<td>NA</td>
+<td>1.8</td>
+</tr>
+<tr>
+<td class="label">data_from_buff[3]</td>
+<td></td>
+<td>121/1</td>
+<td>N</td>
+<td>out</td>
+<td>IOT30[A]</td>
+<td>LVCMOS18</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>1.8</td>
+</tr>
+<tr>
+<td class="label">data_from_buff[4]</td>
+<td></td>
 <td>12/7</td>
 <td>N</td>
 <td>out</td>
@@ -394,7 +470,26 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>1.8</td>
 </tr>
 <tr>
-<td class="label">data_from_buff[1]</td>
+<td class="label">data_from_buff[5]</td>
+<td></td>
+<td>119/1</td>
+<td>N</td>
+<td>out</td>
+<td>IOT38[A]</td>
+<td>LVCMOS18</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>1.8</td>
+</tr>
+<tr>
+<td class="label">data_from_buff[6]</td>
 <td></td>
 <td>9/7</td>
 <td>N</td>
@@ -413,107 +508,12 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>1.8</td>
 </tr>
 <tr>
-<td class="label">data_from_buff[2]</td>
-<td></td>
-<td>7/7</td>
-<td>N</td>
-<td>out</td>
-<td>IOL7[B]</td>
-<td>LVCMOS18</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
-<td>NA</td>
-<td>OFF</td>
-<td>NA</td>
-<td>1.8</td>
-</tr>
-<tr>
-<td class="label">data_from_buff[3]</td>
-<td></td>
-<td>4/7</td>
-<td>N</td>
-<td>out</td>
-<td>IOL2[B]</td>
-<td>LVCMOS18</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
-<td>NA</td>
-<td>OFF</td>
-<td>NA</td>
-<td>1.8</td>
-</tr>
-<tr>
-<td class="label">data_from_buff[4]</td>
-<td></td>
-<td>137/0</td>
-<td>N</td>
-<td>out</td>
-<td>IOT6[B]</td>
-<td>LVCMOS18</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>1.8</td>
-</tr>
-<tr>
-<td class="label">data_from_buff[5]</td>
-<td></td>
-<td>136/0</td>
-<td>N</td>
-<td>out</td>
-<td>IOT7[A]</td>
-<td>LVCMOS18</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>1.8</td>
-</tr>
-<tr>
-<td class="label">data_from_buff[6]</td>
-<td></td>
-<td>135/0</td>
-<td>N</td>
-<td>out</td>
-<td>IOT7[B]</td>
-<td>LVCMOS18</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>1.8</td>
-</tr>
-<tr>
 <td class="label">data_from_buff[7]</td>
 <td></td>
-<td>132/0</td>
+<td>10/7</td>
 <td>N</td>
 <td>out</td>
-<td>IOT14[A]</td>
+<td>IOL22[B]</td>
 <td>LVCMOS18</td>
 <td>8</td>
 <td>UP</td>
@@ -522,31 +522,12 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>OFF</td>
 <td>FAST</td>
 <td>NA</td>
-<td>NA</td>
+<td>OFF</td>
 <td>NA</td>
 <td>1.8</td>
 </tr>
 <tr>
 <td class="label">data_from_phy[0]</td>
-<td></td>
-<td>141/0</td>
-<td>Y</td>
-<td>out</td>
-<td>IOT2[B]</td>
-<td>LVCMOS18</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>1.8</td>
-</tr>
-<tr>
-<td class="label">data_from_phy[1]</td>
 <td></td>
 <td>140/0</td>
 <td>Y</td>
@@ -565,7 +546,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>1.8</td>
 </tr>
 <tr>
-<td class="label">data_from_phy[2]</td>
+<td class="label">data_from_phy[1]</td>
 <td></td>
 <td>139/0</td>
 <td>Y</td>
@@ -584,7 +565,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>1.8</td>
 </tr>
 <tr>
-<td class="label">data_from_phy[3]</td>
+<td class="label">data_from_phy[2]</td>
 <td></td>
 <td>138/0</td>
 <td>Y</td>
@@ -603,7 +584,45 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>1.8</td>
 </tr>
 <tr>
+<td class="label">data_from_phy[3]</td>
+<td></td>
+<td>124/0</td>
+<td>Y</td>
+<td>out</td>
+<td>IOT23[B]</td>
+<td>LVCMOS18</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>1.8</td>
+</tr>
+<tr>
 <td class="label">data_from_phy[4]</td>
+<td></td>
+<td>125/0</td>
+<td>Y</td>
+<td>out</td>
+<td>IOT22[A]</td>
+<td>LVCMOS18</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>1.8</td>
+</tr>
+<tr>
+<td class="label">data_from_phy[5]</td>
 <td></td>
 <td>112/1</td>
 <td>Y</td>
@@ -622,7 +641,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>1.8</td>
 </tr>
 <tr>
-<td class="label">data_from_phy[5]</td>
+<td class="label">data_from_phy[6]</td>
 <td></td>
 <td>113/1</td>
 <td>Y</td>
@@ -641,31 +660,12 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>1.8</td>
 </tr>
 <tr>
-<td class="label">data_from_phy[6]</td>
+<td class="label">data_from_phy[7]</td>
 <td></td>
 <td>110/1</td>
 <td>Y</td>
 <td>out</td>
 <td>IOT50[B]</td>
-<td>LVCMOS18</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>1.8</td>
-</tr>
-<tr>
-<td class="label">data_from_phy[7]</td>
-<td></td>
-<td>111/1</td>
-<td>Y</td>
-<td>out</td>
-<td>IOT50[A]</td>
 <td>LVCMOS18</td>
 <td>8</td>
 <td>UP</td>
@@ -720,16 +720,16 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">141/0</td>
-<td>data_from_phy[0]</td>
-<td>out</td>
+<td>-</td>
+<td>in</td>
 <td>IOT2[B]</td>
 <td>LVCMOS18</td>
-<td>8</td>
+<td>NA</td>
 <td>UP</td>
+<td>ON</td>
+<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
@@ -737,7 +737,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">140/0</td>
-<td>data_from_phy[1]</td>
+<td>data_from_phy[0]</td>
 <td>out</td>
 <td>IOT4[A]</td>
 <td>LVCMOS18</td>
@@ -754,7 +754,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">139/0</td>
-<td>data_from_phy[2]</td>
+<td>data_from_phy[1]</td>
 <td>out</td>
 <td>IOT4[B]</td>
 <td>LVCMOS18</td>
@@ -771,7 +771,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">138/0</td>
-<td>data_from_phy[3]</td>
+<td>data_from_phy[2]</td>
 <td>out</td>
 <td>IOT6[A]</td>
 <td>LVCMOS18</td>
@@ -788,16 +788,16 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">137/0</td>
-<td>data_from_buff[4]</td>
-<td>out</td>
+<td>-</td>
+<td>in</td>
 <td>IOT6[B]</td>
 <td>LVCMOS18</td>
-<td>8</td>
+<td>NA</td>
 <td>UP</td>
+<td>ON</td>
+<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
@@ -805,16 +805,16 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">136/0</td>
-<td>data_from_buff[5]</td>
-<td>out</td>
+<td>-</td>
+<td>in</td>
 <td>IOT7[A]</td>
 <td>LVCMOS18</td>
-<td>8</td>
+<td>NA</td>
 <td>UP</td>
+<td>ON</td>
+<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
@@ -822,16 +822,16 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">135/0</td>
-<td>data_from_buff[6]</td>
-<td>out</td>
+<td>-</td>
+<td>in</td>
 <td>IOT7[B]</td>
 <td>LVCMOS18</td>
-<td>8</td>
+<td>NA</td>
 <td>UP</td>
+<td>ON</td>
+<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
@@ -873,16 +873,16 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">132/0</td>
-<td>data_from_buff[7]</td>
-<td>out</td>
+<td>-</td>
+<td>in</td>
 <td>IOT14[A]</td>
 <td>LVCMOS18</td>
-<td>8</td>
+<td>NA</td>
 <td>UP</td>
+<td>ON</td>
+<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
@@ -958,16 +958,16 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">125/0</td>
-<td>-</td>
-<td>in</td>
+<td>data_from_phy[4]</td>
+<td>out</td>
 <td>IOT22[A]</td>
 <td>LVCMOS18</td>
-<td>NA</td>
+<td>8</td>
 <td>UP</td>
-<td>ON</td>
-<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
@@ -992,16 +992,16 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">124/0</td>
-<td>-</td>
-<td>in</td>
+<td>data_from_phy[3]</td>
+<td>out</td>
 <td>IOT23[B]</td>
 <td>LVCMOS18</td>
-<td>NA</td>
+<td>8</td>
 <td>UP</td>
-<td>ON</td>
-<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
@@ -1009,16 +1009,16 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">123/0</td>
-<td>-</td>
-<td>in</td>
+<td>data_from_buff[1]</td>
+<td>out</td>
 <td>IOT27[A]</td>
 <td>LVCMOS18</td>
-<td>NA</td>
+<td>8</td>
 <td>UP</td>
-<td>ON</td>
-<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
@@ -1026,7 +1026,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">122/0</td>
-<td>-</td>
+<td>clk</td>
 <td>in</td>
 <td>IOT27[B]</td>
 <td>LVCMOS18</td>
@@ -1043,16 +1043,16 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">121/1</td>
-<td>-</td>
-<td>in</td>
+<td>data_from_buff[3]</td>
+<td>out</td>
 <td>IOT30[A]</td>
 <td>LVCMOS18</td>
-<td>NA</td>
+<td>8</td>
 <td>UP</td>
-<td>ON</td>
-<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
@@ -1077,16 +1077,16 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">119/1</td>
-<td>-</td>
-<td>in</td>
+<td>data_from_buff[5]</td>
+<td>out</td>
 <td>IOT38[A]</td>
 <td>LVCMOS18</td>
-<td>NA</td>
+<td>8</td>
 <td>UP</td>
-<td>ON</td>
-<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
@@ -1179,7 +1179,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">113/1</td>
-<td>data_from_phy[5]</td>
+<td>data_from_phy[6]</td>
 <td>out</td>
 <td>IOT48[A]</td>
 <td>LVCMOS18</td>
@@ -1196,7 +1196,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">112/1</td>
-<td>data_from_phy[4]</td>
+<td>data_from_phy[5]</td>
 <td>out</td>
 <td>IOT48[B]</td>
 <td>LVCMOS18</td>
@@ -1213,16 +1213,16 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">111/1</td>
-<td>data_from_phy[7]</td>
-<td>out</td>
+<td>-</td>
+<td>in</td>
 <td>IOT50[A]</td>
 <td>LVCMOS18</td>
-<td>8</td>
+<td>NA</td>
 <td>UP</td>
+<td>ON</td>
+<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
@@ -1230,7 +1230,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">110/1</td>
-<td>data_from_phy[6]</td>
+<td>data_from_phy[7]</td>
 <td>out</td>
 <td>IOT50[B]</td>
 <td>LVCMOS18</td>
@@ -1825,18 +1825,18 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">4/7</td>
-<td>data_from_buff[3]</td>
-<td>out</td>
+<td>-</td>
+<td>in</td>
 <td>IOL2[B]</td>
 <td>LVCMOS18</td>
-<td>8</td>
+<td>NA</td>
 <td>UP</td>
+<td>ON</td>
+<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
 <td>NA</td>
-<td>OFF</td>
+<td>NA</td>
 <td>NA</td>
 <td>1.8</td>
 </tr>
@@ -1859,24 +1859,24 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">7/7</td>
-<td>data_from_buff[2]</td>
-<td>out</td>
+<td>-</td>
+<td>in</td>
 <td>IOL7[B]</td>
 <td>LVCMOS18</td>
-<td>8</td>
+<td>NA</td>
 <td>UP</td>
+<td>ON</td>
+<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
 <td>NA</td>
-<td>OFF</td>
+<td>NA</td>
 <td>NA</td>
 <td>1.8</td>
 </tr>
 <tr>
 <td class="label">9/7</td>
-<td>data_from_buff[1]</td>
+<td>data_from_buff[6]</td>
 <td>out</td>
 <td>IOL22[A]</td>
 <td>LVCMOS18</td>
@@ -1893,33 +1893,33 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">10/7</td>
-<td>-</td>
-<td>in</td>
+<td>data_from_buff[7]</td>
+<td>out</td>
 <td>IOL22[B]</td>
 <td>LVCMOS18</td>
-<td>NA</td>
+<td>8</td>
 <td>UP</td>
-<td>ON</td>
-<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
 <td>NA</td>
-<td>NA</td>
+<td>OFF</td>
 <td>NA</td>
 <td>1.8</td>
 </tr>
 <tr>
 <td class="label">11/7</td>
-<td>clk</td>
-<td>in</td>
+<td>data_from_buff[2]</td>
+<td>out</td>
 <td>IOL27[A]</td>
 <td>LVCMOS18</td>
-<td>NA</td>
+<td>8</td>
 <td>UP</td>
-<td>ON</td>
-<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
 <td>NA</td>
 <td>OFF</td>
 <td>NA</td>
@@ -1927,7 +1927,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">12/7</td>
-<td>data_from_buff[0]</td>
+<td>data_from_buff[4]</td>
 <td>out</td>
 <td>IOL27[B]</td>
 <td>LVCMOS18</td>
@@ -2148,18 +2148,18 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">105/2</td>
-<td>-</td>
-<td>in</td>
+<td>data_from_buff[0]</td>
+<td>out</td>
 <td>IOR7[B]</td>
 <td>LVCMOS18</td>
-<td>NA</td>
+<td>8</td>
 <td>UP</td>
-<td>ON</td>
-<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
+<td>OFF</td>
+<td>FAST</td>
 <td>NA</td>
-<td>NA</td>
+<td>OFF</td>
 <td>NA</td>
 <td>1.8</td>
 </tr>
