Small but very important fixes in configuration and mac modules

--- a/impl/gwsynthesis/EthernetBRIDGE_syn_resource.html
+++ b/impl/gwsynthesis/EthernetBRIDGE_syn_resource.html
@@ -37,6 +37,15 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
+<td class="label">&nbsp&nbsp&nbsp&nbsp|--configurator
+ (E:/EthernetBRIDGE/src/top_mac_to_fifo_test.v)</td>
+<td align = "center">35</td>
+<td align = "center">31</td>
+<td align = "center">15</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+</tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--mac
  (E:/EthernetBRIDGE/src/top_mac_to_fifo_test.v)</td>
 <td align = "center">-</td>
@@ -48,9 +57,9 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--mac_controller
  (E:/EthernetBRIDGE/src/mac_controller.v)</td>
-<td align = "center">561</td>
+<td align = "center">562</td>
 <td align = "center">-</td>
-<td align = "center">717</td>
+<td align = "center">721</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">23</td>
@@ -59,7 +68,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
  (E:/EthernetBRIDGE/src/top_mac_to_fifo_test.v)</td>
 <td align = "center">27</td>
 <td align = "center">-</td>
-<td align = "center">168</td>
+<td align = "center">179</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
