tx_control improvment

--- a/impl/pnr/EthernetBRIDGE.power.html
+++ b/impl/pnr/EthernetBRIDGE.power.html
@@ -87,7 +87,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Sat May 13 00:53:09 2023
+<td>Sun May 14 04:43:01 2023
 </td>
 </tr>
 <tr>
@@ -100,7 +100,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <table class="summary_table">
 <tr>
 <td class="label">Total Power (mW)</td>
-<td>192.192</td>
+<td>192.491</td>
 </tr>
 <tr>
 <td class="label">Quiescent Power (mW)</td>
@@ -108,14 +108,14 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Dynamic Power (mW)</td>
-<td>28.970</td>
+<td>29.269</td>
 </tr>
 </table>
 <h2><a name="Thermal_Info">Thermal Information:</a></h2>
 <table class="summary_table">
 <tr>
 <td class="label">Junction Temperature</td>
-<td>28.242</td>
+<td>28.247</td>
 </tr>
 <tr>
 <td class="label">Theta JA</td>
@@ -123,7 +123,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Max Allowed Ambient Temperature</td>
-<td>81.758</td>
+<td>81.753</td>
 </tr>
 </table>
 <h2><a name="Configure_Info">Configure Information:</a></h2>
@@ -192,9 +192,9 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td>VCC</td>
 <td>1.000</td>
-<td>18.381</td>
+<td>18.681</td>
 <td>102.762</td>
-<td>121.143</td>
+<td>121.443</td>
 </tr>
 <tr>
 <td>VCCX</td>
@@ -222,9 +222,9 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>Logic</td>
-<td>1.567</td>
+<td>1.860</td>
 <td>NA</td>
-<td>12.552</td>
+<td>12.597</td>
 </tr>
 <tr>
 <td>IO</td>
@@ -248,24 +248,28 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>top_mac_to_fifo_test</td>
-<td>15.832</td>
-<td>15.832(15.718)</td>
+<td>16.125</td>
+<td>16.125(16.011)</td>
+<tr>
+<td>top_mac_to_fifo_test/configurator/</td>
+<td>0.273</td>
+<td>0.273(0.000)</td>
 <tr>
 <td>top_mac_to_fifo_test/controller/</td>
-<td>0.180</td>
-<td>0.180(0.000)</td>
+<td>0.191</td>
+<td>0.191(0.000)</td>
 <tr>
 <td>top_mac_to_fifo_test/mac/</td>
-<td>1.096</td>
-<td>1.096(1.096)</td>
+<td>1.104</td>
+<td>1.104(1.104)</td>
 <tr>
 <td>top_mac_to_fifo_test/mac/mac_controller/</td>
-<td>1.096</td>
-<td>1.096(1.096)</td>
+<td>1.104</td>
+<td>1.104(1.104)</td>
 <tr>
 <td>top_mac_to_fifo_test/mac/mac_controller/u_triple_speed_mac/</td>
-<td>1.096</td>
-<td>1.096(1.096)</td>
+<td>1.104</td>
+<td>1.104(1.104)</td>
 <tr>
 <td>top_mac_to_fifo_test/mac/mac_controller/u_triple_speed_mac/u_mac_rx_ctrl/</td>
 <td>0.203</td>
@@ -304,16 +308,16 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>0.014(0.000)</td>
 <tr>
 <td>top_mac_to_fifo_test/mac/mac_controller/u_triple_speed_mac/u_miim_block/</td>
-<td>0.095</td>
-<td>0.095(0.095)</td>
+<td>0.103</td>
+<td>0.103(0.103)</td>
 <tr>
 <td>top_mac_to_fifo_test/mac/mac_controller/u_triple_speed_mac/u_miim_block/u_eth_miim/</td>
-<td>0.095</td>
-<td>0.095(0.063)</td>
+<td>0.103</td>
+<td>0.103(0.066)</td>
 <tr>
 <td>top_mac_to_fifo_test/mac/mac_controller/u_triple_speed_mac/u_miim_block/u_eth_miim/clkgen/</td>
-<td>0.020</td>
-<td>0.020(0.000)</td>
+<td>0.023</td>
+<td>0.023(0.000)</td>
 <tr>
 <td>top_mac_to_fifo_test/mac/mac_controller/u_triple_speed_mac/u_miim_block/u_eth_miim/outctrl/</td>
 <td>0.008</td>
@@ -337,22 +341,27 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td>phy_tx_clk</td>
 <td>100.000</td>
-<td>0.892</td>
+<td>0.881</td>
 </tr>
 <tr>
 <td>phy_rx_clk</td>
 <td>100.000</td>
-<td>14.826</td>
+<td>14.824</td>
+</tr>
+<tr>
+<td>phy_mdc_d</td>
+<td>100.000</td>
+<td>0.291</td>
 </tr>
 <tr>
 <td>clk</td>
 <td>100.000</td>
-<td>0.103</td>
+<td>0.100</td>
 </tr>
 <tr>
 <td>rx_stat_valid</td>
 <td>100.000</td>
-<td>0.080</td>
+<td>0.103</td>
 </tr>
 </table>
 </div><!-- content -->
