--- a/impl/gwsynthesis/EthernetBRIDGE_syn_resource.html
+++ b/impl/gwsynthesis/EthernetBRIDGE_syn_resource.html
@@ -30,9 +30,9 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 </tr>
 <tr>
 <td class="label">top_mac_to_fifo_test (E:/EthernetBRIDGE/src/top_mac_to_fifo_test.v)</td>
-<td align = "center">16</td>
+<td align = "center">-</td>
 <td align = "center">13</td>
-<td align = "center">4</td>
+<td align = "center">6</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -41,7 +41,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
  (E:/EthernetBRIDGE/src/top_mac_to_fifo_test.v)</td>
 <td align = "center">35</td>
 <td align = "center">31</td>
-<td align = "center">15</td>
+<td align = "center">17</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -66,9 +66,9 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--controller
  (E:/EthernetBRIDGE/src/top_mac_to_fifo_test.v)</td>
-<td align = "center">29</td>
+<td align = "center">30</td>
 <td align = "center">-</td>
-<td align = "center">217</td>
+<td align = "center">228</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -78,6 +78,15 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">24</td>
 <td align = "center">22</td>
 <td align = "center">6</td>
+<td align = "center">-</td>
+<td align = "center">1</td>
+<td align = "center">-</td>
+</tr>
+<td class="label">&nbsp&nbsp&nbsp&nbsp|--rx_frm_len_fifo
+ (E:/EthernetBRIDGE/src/top_mac_to_fifo_test.v)</td>
+<td align = "center">40</td>
+<td align = "center">38</td>
+<td align = "center">12</td>
 <td align = "center">-</td>
 <td align = "center">1</td>
 <td align = "center">-</td>
