--- a/impl/gwsynthesis/EthernetBRIDGE_syn_resource.html
+++ b/impl/gwsynthesis/EthernetBRIDGE_syn_resource.html
@@ -32,16 +32,16 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td class="label">top_mac_to_fifo_test (E:/EthernetBRIDGE/src/top_mac_to_fifo_test.v)</td>
 <td align = "center">-</td>
 <td align = "center">13</td>
-<td align = "center">6</td>
+<td align = "center">7</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--configurator
  (E:/EthernetBRIDGE/src/top_mac_to_fifo_test.v)</td>
-<td align = "center">35</td>
-<td align = "center">31</td>
-<td align = "center">17</td>
+<td align = "center">6</td>
+<td align = "center">-</td>
+<td align = "center">7</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -66,9 +66,9 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--controller
  (E:/EthernetBRIDGE/src/top_mac_to_fifo_test.v)</td>
-<td align = "center">30</td>
+<td align = "center">37</td>
 <td align = "center">-</td>
-<td align = "center">228</td>
+<td align = "center">112</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
